--- a/requirements.txt
+++ b/requirements.txt
@@ -36,7 +36,6 @@ pure_eval==0.2.3
 Pygments==2.18.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
-pywin32==308
 pyzmq==26.2.0
 referencing==0.35.1
 requests==2.32.3
@@ -50,5 +49,8 @@ traitlets==5.14.3
 urllib3==2.2.3
 wcwidth==0.2.13
 webencodings==0.5.1
-windows-curses==2.4.0
 yarg==0.1.9
+
+# Platform specific dependencies
+windows-curses==2.4.0; platform_system == "Windows"
+pywin32==308; platform_system == "Windows"
